@@ -7,11 +7,10 @@ import org.bouncycastle.asn1.ASN1ObjectIdentifier;
 import org.bouncycastle.asn1.nist.NISTNamedCurves;
 import org.bouncycastle.jce.ECNamedCurveTable;
 import org.xipki.security.EdECConstants;
+import org.xipki.util.Args;
 import org.xipki.util.StringUtil;
 
 import java.util.*;
-
-import static org.xipki.util.Args.*;
 
 /**
  * Algorithm utility class.
@@ -69,7 +68,7 @@ public class AlgorithmUtil {
 
     Collections.sort(nameList);
     curveNames = Collections.unmodifiableList(nameList);
-    curveOIDs = Collections.unmodifiableList(new ArrayList<>(oidNameMap.keySet()));
+    curveOIDs = List.copyOf(oidNameMap.keySet());
     curveNameToOidMap = Collections.unmodifiableMap(nameOidMap);
     curveOidToNameMap = Collections.unmodifiableMap(oidNameMap);
   } // method static
@@ -78,7 +77,8 @@ public class AlgorithmUtil {
   }
 
   public static boolean equalsAlgoName(String algoNameA, String algoNameB) {
-    if (notBlank(algoNameA, "algoNameA").equalsIgnoreCase(notBlank(algoNameB, "algoNameB"))) {
+    if (Args.notBlank(algoNameA, "algoNameA")
+        .equalsIgnoreCase(Args.notBlank(algoNameB, "algoNameB"))) {
       return true;
     }
 
@@ -100,7 +100,7 @@ public class AlgorithmUtil {
   } // method equalsAlgoName
 
   private static Set<String> splitAlgoNameTokens(String algoName) {
-    String tmpAlgoName = notBlank(algoName, "algoName").toUpperCase();
+    String tmpAlgoName = Args.notBlank(algoName, "algoName").toUpperCase();
     int idx = tmpAlgoName.indexOf("AND");
     Set<String> set = new HashSet<>();
 
@@ -131,7 +131,7 @@ public class AlgorithmUtil {
   } // method splitAlgoNameTokens
 
   private static ASN1ObjectIdentifier getCurveOidForName(String curveName) {
-    return curveNameToOidMap.get(toNonBlankLower(curveName, "curveName"));
+    return curveNameToOidMap.get(Args.toNonBlankLower(curveName, "curveName"));
   } // method getCurveOidForName
 
   public static List<String> getECCurveNames() {
@@ -143,8 +143,7 @@ public class AlgorithmUtil {
   }
 
   public static String getCurveName(ASN1ObjectIdentifier curveOid) {
-    notNull(curveOid, "curveOid");
-    String curveName = curveOidToNameMap.get(curveOid);
+    String curveName = curveOidToNameMap.get(Args.notNull(curveOid, "curveOid"));
     if (curveName == null) {
       curveName = EdECConstants.getName(curveOid);
     }
@@ -152,10 +151,9 @@ public class AlgorithmUtil {
   }
 
   public static ASN1ObjectIdentifier getCurveOidForCurveNameOrOid(String curveNameOrOid) {
-    notBlank(curveNameOrOid, "curveNameOrOid");
     ASN1ObjectIdentifier oid;
     try {
-      oid = new ASN1ObjectIdentifier(curveNameOrOid);
+      oid = new ASN1ObjectIdentifier(Args.notBlank(curveNameOrOid, "curveNameOrOid"));
     } catch (Exception ex) {
       oid = getCurveOidForName(curveNameOrOid);
       if (oid == null) {
